@@ -832,6 +832,7 @@ IDA_ALARM_BROWSER ACCELERATORS DISCARDABLE
 BEGIN
     "A",            ID_ALARM_ACKNOWLEGE,    VIRTKEY, CONTROL, NOINVERT
     "N",            ID_ALARM_SHOWNODES,     VIRTKEY, ALT, NOINVERT
+    "V",            ID_ALARM_ENABLE_SPEAKER, VIRTKEY, ALT, NOINVERT
     VK_DELETE,      ID_ALARM_DELETE,        VIRTKEY, NOINVERT
 END
 
